# hiresense-ai

./: .env  .gitignore  License  README.md  app.py  live_interview_routes.py  main.py  pyproject.toml  requirements.txt  update_templates.py
data/: interview_questions.py
graphify-out/: .graphify_analysis.json  GRAPH_TREE.html  graph.json  manifest.json
models/: user.py
modules/: answer_relevance.py  facial_analysis.py  hiring_recommendation.py  llm_feedback.py  nlp_analysis.py  question_generator.py  resume_analysis.py  scoring.py  speech_analysis.py  star_analysis.py  start_project.txt
static/css/: global.css
templates/: candidate_dashboard.html  dashboard.html  full_analysis.html  hiring_dashboard.html  index.html  interview_upload.html  live_interview.html  login.html  recruiter_dashboard.html  register.html  resume_dashboard.html  resume_upload.html
