[project]
name = "hiresense-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "keras==3.0.5",
    "mediapipe==0.10.14",
    "ollama>=0.6.2",
    "openai-whisper>=20250625",
    "pymupdf>=1.27.2.3",
    "python-docx>=1.2.0",
    "spacy>=3.8.14",
    "tensorflow==2.16.1",
    "tf-keras>=2.16.0",
]
